[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.0",
    "huggingface-hub>=1.15.0",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
